Does this fix the long-standing travis-ci scala build error?