@@ -20,3 +20,10 @@ rootProject.tasks.reobf {
         spec.classpath = sourceSets.main.compileClasspath
     }
 }
+
+tasks.withType(ScalaCompile) {
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
+}
